# mpc

./: .VERSION  .buildinfo  .clang-tidy  .dep_config  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  COPYING  ChangeLog  GETTING-STARTED.md  INSTALL  INSTALL.md  INSTALL.mpcframework  MAINTAINERS  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  VERSION  aclocal.m4  autogen.sh  build.html  changelog.html  changelog.md  check_deps  common_configure  config  config.arch.txt  config.txt  configure  (+17 more)
mpc/MPC_Allocator/: CMakeLists.txt  DEPENDENCIES.txt  Makefile  config-meta.xml  configure  independant_build.sh  module_dep  sys_dep  toolchain.cmake
mpc/MPC_Allocator/cmake/: FindHwloc.cmake  FindOpenPA.cmake  FindsvUnitTest.cmake  macros.cmake
mpc/MPC_Allocator/include/: mpcalloc.h
mpc/MPC_Allocator/src/: CMakeLists.txt  sctk_alloc.c  sctk_alloc_chain.h  (+50 more)
mpcframework/: .MPC_License  .MPC_version  .clang-format  Makefile.am  Makefile.in  ROOT.md  aclocal.m4  configure  configure.ac  list_of_files  modules.def  mpc_config.h.in
mpcframework/MPC_Accelerators/: MPC_Accelerators.md  Makefile  config-meta.xml  module_dep  sys_dep
mpcframework/MPC_Active_Message/: Makefile  config-meta.xml  module_dep  sys_dep
mpcframework/MPC_Allocator/: MPC_Allocator.md  Makefile  module_dep  sys_dep
mpcframework/MPC_Arch/: Makefile.am  Makefile.in
mpcframework/MPC_Common/: MPC_Common.md  Makefile  Makefile.am  Makefile.in  config-meta.xml  module_dep  mpit.xml  sys_dep
mpcframework/MPC_Config/: MPC_Config.md  Makefile  Makefile.am  Makefile.in  sys_dep
mpcframework/MPC_Debugger/: MPC_Debugger.md  Makefile  sys_dep
mpcframework/MPC_Doc/: GettingStarted.md  GettingStarted.md.template  InstallationGuide.md.template  MPC_Doc.md  Makefile  Makefile.am  Makefile.in  README  build_manpage  build_manpage.sh  install_manpage  mpc_manpage.template  patch_manpage.sh  updatesrc
mpcframework/MPC_Fault_Tolerance/: MPC_Fault_Tolerance.md  Makefile  config-meta.xml  module_dep  sys_dep
mpcframework/MPC_Launch/: Makefile  Makefile.in  config-meta.xml  module_dep  sys_dep
mpcframework/MPC_MPI/: MPC_MPI.md  Makefile  Makefile.in  config-meta.xml  module_dep  mpit.xml
mpcframework/MPC_Message_Passing/: MPC_Message_Passing.md  Makefile  Makefile.am  Makefile.in  config-meta.xml  module_dep  mpit.xml  sys_dep
mpcframework/MPC_Microthreads/: MPC_Microthreads.md  Makefile  module_dep
mpcframework/MPC_OpenMP/: MPC_OpenMP.md  Makefile  Makefile.in  config-meta.xml  module_dep  sys_dep  version_gomp.txt
mpcframework/MPC_Profiler/: MPC_Profiler.md  Makefile  mpit.xml
mpcframework/MPC_Shm_mapper/: Makefile  module_dep  sys_dep
mpcframework/MPC_Tests/: Makefile  sctk_keywords.h  topo.xml
mpcframework/MPC_Thread_db/: module_dep
mpcframework/MPC_Threads/: MPC_Threads.md  Makefile  Makefile.am  Makefile.in  config-meta.xml  module_dep  sys_dep
mpcframework/MPC_Tools/: MPC_Tools.md  mpc_check_base  mpc_configure_am_compiler  mpc_configure_cflags  mpc_configure_common  mpc_configure_compiler  mpc_configure_compiler_manager  mpc_configure_config.status  mpc_configure_determine_config  mpc_configure_env  mpc_configure_extern_deps  mpc_configure_functions  mpc_configure_install_cleaner  mpc_configure_ldflags  mpc_configure_makefile  mpc_configure_makefile.orig  mpc_configure_modules  mpc_configure_mpc_edit_config  mpc_configure_mpcrun  mpc_configure_reconfigure  mpc_configure_status  mpc_detect_sys_includes  mpc_edit_config_common  mpc_gen_makefile  mpc_gen_runtime_config  mpc_get_not_implemented  mpc_inc_minor_version  mpc_make_fortran_interface.c  mpc_print_version  mpc_remove_module  mpcrun_common
mpcframework/MPC_Topology/: Makefile  Makefile.am  Makefile.in  config-meta.xml  module_dep  mpit.xml  sys_dep
mpcframework/MPC_Virtual_Machines/: MPC_Virtual_Machines.md  Makefile
mpcframework/__old_tools/: MPC_Tools.md  mpc_configure_cflags  mpc_configure_common  mpc_configure_compiler_manager  mpc_configure_determine_config  mpc_configure_extern_deps  mpc_configure_install_cleaner  mpc_configure_makefile  mpc_configure_mpcrun  mpc_gen_all_makefiles  mpc_gen_compilation_flags  mpc_gen_mpit  mpc_inc_major_version  mpc_list_files  mpc_prepare_includes
mpcframework/include/: mpc.h  mpc_keywords.h  mpc_main.h
mpcframework/lib/: Makefile.am  Makefile.in
sctk_arch/: Makefile.in  configure  configure.in
sctk_arch/include/: libarch.h  libarchconfig.h.in  sctk_config_arch.h.in
sctk_arch/libcontext/: Makefile.in
sctk_arch/libmicrotask/: Makefile.in
sctk_arch/libpause/: Makefile.in  pause.c
sctk_arch/libtimer/: Makefile.in  timer.c
sctk_arch/test/: test03.c
sctk_arch/tools/: context_detect_arch.c  gen_configure.sh
src/: .MPC_version  Makefile.am  Makefile.in  ROOT.md
src/MPC_Arch/: Makefile.am  Makefile.in
src/MPC_Common/: MPC_Common.md  Makefile.am  Makefile.in
src/MPC_Config/: MPC_Config.md  Makefile.am  Makefile.in
src/MPC_Doc/: MPC_Doc.md  Makefile.am  Makefile.in  gen_manpage.sh  install_all_manpages.sh  patch_manpage.sh
src/MPC_Fortran/: Makefile.am  Makefile.in
src/MPC_IO/: Makefile.am  Makefile.in
src/MPC_Launch/: MPC_Launch.md  Makefile.am  Makefile.in
src/MPC_Lowcomm/: MPC_Lowcomm.md  MPC_Message_Passing.md  Makefile.am  Makefile.in  config-meta.xml
src/MPC_MPI/: MPC_MPI.md  Makefile.am  Makefile.in  config-meta.xml  module_dep  sys_dep
src/MPC_Message_Passing/: MPC_Message_Passing.md  Makefile.am  Makefile.in
src/MPC_Microthreads/: MPC_Microthreads.md
src/MPC_OpenMP/: MPC_OpenMP.md  Makefile.am  Makefile.bak  Makefile.in  config-meta.xml  tiedness  version_gomp.txt  version_kmp.txt
src/MPC_Tests/: Makefile  topo.xml
src/MPC_Thread_db/: MPC_Debugger.md  Makefile  sys_dep
src/MPC_Threads/: MPC_Threads.md  Makefile  Makefile.am  Makefile.in  config-meta.xml
src/MPC_Topology/: Makefile.am  Makefile.in
src/include/: mpc.h  mpc.h.in  mpc_main.h  mpc_threads_config.h.in  mpi.h.in
src/lib/: Makefile.am  Makefile.in
(+4450 files in other folders)
